# Matrix

./: .clang-format  .gitmodules  CMakeLists.txt
bench/: bench.cpp
include/: Matrix.hpp  expression_template.h
test/: CMakeLists.txt  augment_test.cpp  augment_tests.cpp  construction_test.cpp  gaussian_test.cpp  indexing_test.cpp  inverse_test.cpp  iterators_test.cpp  main.cpp  main_test.cpp  meta_test.cpp  mocks.hpp  operators_test.cpp  rowswapper_test.cpp  test_helpers.hpp  transpose_test.cpp  wrapper_test.cpp
